Unset min-width on .card-header .btn to avoid Edit button layout issues

--- a/scss/_card.scss
+++ b/scss/_card.scss
@@ -106,6 +106,10 @@
     top: 1px;
   }
 
+  .btn {
+    min-width: 0;
+  }
+
 }
 
 .card-footer {
